force-app/main/default/objects/Cara_Plus_Activity__c/Cara_Plus_Activity__c.object-meta.xml
<CustomObject>
    <label>Cara Plus Activity</label>
    <nameField>
        <displayFormat>CaraPlus-{00000}</displayFormat>
        <label>Cara Plus Activity Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cara Plus Activities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>