force-app/main/default/objects/Cara_Plus_Activity__c/fields/Adopted_Changes_Inclusive_Hiring__c.field-meta.xml
<CustomField>
    <fullName>Adopted_Changes_Inclusive_Hiring__c</fullName>
    <label>Adopted Changes - Inclusive Hiring</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>