force-app/main/default/objects/Cara_Plus_Activity__c/fields/Adopted_Changes_Retention__c.field-meta.xml
<CustomField>
    <fullName>Adopted_Changes_Retention__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Adopted Changes - Retention</label>
    <type>Checkbox</type>
</CustomField>