force-app/main/default/objects/Cara_Plus_Activity__c/fields/Adopted_Changes_Retention_Text__c.field-meta.xml
<CustomField>
    <fullName>Adopted_Changes_Retention_Text__c</fullName>
    <label>Adopted Changes - Retention</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>