force-app/main/default/objects/Cara_Plus_Activity__c/fields/Adopted_Components__c.field-meta.xml
<CustomField>
    <fullName>Adopted_Components__c</fullName>
    <label>Adopted Components</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Recruitment</fullName>
            </value>
            <value>
                <fullName>Training</fullName>
            </value>
            <value>
                <fullName>Coaching</fullName>
            </value>
            <value>
                <fullName>Placement</fullName>
            </value>
            <value>
                <fullName>Measurement</fullName>
            </value>
            <value>
                <fullName>Fundraising/Communications</fullName>
            </value>
            <value>
                <fullName>SOE/Competency-based assessments</fullName>
            </value>
            <value>
                <fullName>Motivations/ARTs</fullName>
            </value>
            <value>
                <fullName>Simulated workplace environment</fullName>
            </value>
            <value>
                <fullName>Accountability measures</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>