force-app/main/default/objects/Cara_Plus_Activity__c/fields/Adopted_Practice_Changes_Inclusive_Hir__c.field-meta.xml
<CustomField>
    <fullName>Adopted_Practice_Changes_Inclusive_Hir__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Adopted Changes - Inclusive Hiring</label>
    <type>Checkbox</type>
</CustomField>