force-app/main/default/objects/Cara_Plus_Activity__c/fields/Adopted_Practice_Changes_WFD__c.field-meta.xml
<CustomField>
    <fullName>Adopted_Practice_Changes_WFD__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Adopted Practice Changes - WFD</label>
    <type>Checkbox</type>
</CustomField>