force-app/main/default/objects/Cara_Plus_Activity__c/fields/Budget__c.field-meta.xml
<CustomField>
    <fullName>Budget__c</fullName>
    <label>Budget</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0 - 500,000</fullName>
            </value>
            <value>
                <fullName>500,001 - 1 million</fullName>
            </value>
            <value>
                <fullName>1 million - 5 million</fullName>
            </value>
            <value>
                <fullName>5 million - 10 million</fullName>
            </value>
            <value>
                <fullName>10 million - 20 million</fullName>
            </value>
            <value>
                <fullName>&gt;20 million</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>