force-app/main/default/objects/Cara_Plus_Activity__c/fields/Changed_Behaviors__c.field-meta.xml
<CustomField>
    <fullName>Changed_Behaviors__c</fullName>
    <label>Changed Behaviors</label>
    <type>TextArea</type>
</CustomField>