force-app/main/default/objects/Cara_Plus_Activity__c/fields/Cohort_Lab__c.field-meta.xml
<CustomField>
    <fullName>Cohort_Lab__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>Use the magnifying glass to lookup the corresponding Campaign for the cohort/lab</inlineHelpText>
    <label>Cohort/Lab</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Campaign.Parent.Name</field>
            <operation>contains</operation>
            <value>Inclusion Action Lab, Workforce Development Solutions Lab</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Cara Plus Activities</relationshipLabel>
    <relationshipName>Cara_Plus_Activities</relationshipName>
    <type>Lookup</type>
</CustomField>