force-app/main/default/objects/Cara_Plus_Activity__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <description>Last date of the reporting period (i.e., last day of the fiscal quarter).</description>
    <inlineHelpText>Last date of the reporting period (i.e., last day of the fiscal quarter).</inlineHelpText>
    <label>End Date</label>
    <type>Date</type>
</CustomField>