force-app/main/default/objects/Cara_Plus_Activity__c/fields/Fiscal_Year__c.field-meta.xml
<CustomField>
    <fullName>Fiscal_Year__c</fullName>
    <label>Fiscal Year</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>FY19</fullName>
                <isActive>false</isActive>
                <label>FY19</label>
            </value>
            <value>
                <fullName>FY20</fullName>
                <isActive>false</isActive>
                <label>FY20</label>
            </value>
            <value>
                <fullName>FY21</fullName>
                <isActive>false</isActive>
                <label>FY21</label>
            </value>
            <value>
                <fullName>FY22</fullName>
            </value>
            <value>
                <fullName>FY23</fullName>
            </value>
            <value>
                <fullName>FY24</fullName>
            </value>
            <value>
                <fullName>FY25</fullName>
            </value>
            <value>
                <fullName>FY26</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>