force-app/main/default/objects/Cara_Plus_Activity__c/fields/Geographic_Foci__c.field-meta.xml
<CustomField>
    <fullName>Geographic_Foci__c</fullName>
    <inlineHelpText>City, State</inlineHelpText>
    <label>Geographic Foci</label>
    <length>255</length>
    <type>Text</type>
</CustomField>