force-app/main/default/objects/Cara_Plus_Activity__c/fields/Inclusive_Employment_TA__c.field-meta.xml
<CustomField>
    <fullName>Inclusive_Employment_TA__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Inclusive Employment TA</label>
    <type>Checkbox</type>
</CustomField>