force-app/main/default/objects/Cara_Plus_Activity__c/fields/Intended_Practice_Changes__c.field-meta.xml
<CustomField>
    <fullName>Intended_Practice_Changes__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Intended Practice Changes</label>
    <type>Checkbox</type>
</CustomField>