force-app/main/default/objects/Cara_Plus_Activity__c/fields/Interests__c.field-meta.xml
<CustomField>
    <fullName>Interests__c</fullName>
    <label>Interests</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sourcing</fullName>
            </value>
            <value>
                <fullName>Hiring</fullName>
            </value>
            <value>
                <fullName>Job Quality/Support</fullName>
            </value>
            <value>
                <fullName>Recruitment</fullName>
            </value>
            <value>
                <fullName>Training/Transformations</fullName>
            </value>
            <value>
                <fullName>Pre-Placement Coaching</fullName>
            </value>
            <value>
                <fullName>Placement/Employer Relations</fullName>
            </value>
            <value>
                <fullName>Retention Coaching</fullName>
            </value>
            <value>
                <fullName>Advancement</fullName>
            </value>
            <value>
                <fullName>Overall Service Delivery</fullName>
            </value>
            <value>
                <fullName>Data Tracking System</fullName>
            </value>
            <value>
                <fullName>Metrics and Storytelling</fullName>
            </value>
            <value>
                <fullName>Cara&apos;s History</fullName>
            </value>
            <value>
                <fullName>Cara&apos;s Culture</fullName>
            </value>
            <value>
                <fullName>Social Enterprises</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>Workforce Development/Industry Landscape</fullName>
            </value>
            <value>
                <fullName>Public Positioning</fullName>
            </value>
            <value>
                <fullName>Inclusive Employment</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>