force-app/main/default/objects/Cara_Plus_Activity__c/fields/Internships_Temp_Jobs_or_Equivalent__c.field-meta.xml
<CustomField>
    <fullName>Internships_Temp_Jobs_or_Equivalent__c</fullName>
    <label># Internships, Temp Jobs, or Equivalent</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>