force-app/main/default/objects/Cara_Plus_Activity__c/fields/Lead_Stage__c.field-meta.xml
<CustomField>
    <fullName>Lead_Stage__c</fullName>
    <label>Lead Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Prospect</fullName>
            </value>
            <value>
                <fullName>Qualified_Lead</fullName>
                <label>Qualified Lead</label>
            </value>
            <value>
                <fullName>Engaged Lead</fullName>
            </value>
            <value>
                <fullName>Traction</fullName>
            </value>
            <value>
                <fullName>Not_Interested</fullName>
                <label>Not Interested</label>
            </value>
            <value>
                <fullName>Lead</fullName>
                <isActive>false</isActive>
                <label>Lead</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>