force-app/main/default/objects/Cara_Plus_Activity__c/fields/Media_Attention__c.field-meta.xml
<CustomField>
    <fullName>Media_Attention__c</fullName>
    <label>Media Attention for Cara-Inspired Work</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>