force-app/main/default/objects/Cara_Plus_Activity__c/fields/More_Overlooked_Talent_Engaged__c.field-meta.xml
<CustomField>
    <fullName>More_Overlooked_Talent_Engaged__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>More overlooked talent engaged, hired, or retained</inlineHelpText>
    <label>More Overlooked Talent Engaged</label>
    <type>Checkbox</type>
</CustomField>