force-app/main/default/objects/Cara_Plus_Activity__c/fields/New_Additional_Funded_from__c.field-meta.xml
<CustomField>
    <fullName>New_Additional_Funded_from__c</fullName>
    <label>New/Additional Funding from Practices</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>