force-app/main/default/objects/Cara_Plus_Activity__c/fields/New_Additional_Funding__c.field-meta.xml
<CustomField>
    <fullName>New_Additional_Funding__c</fullName>
    <label>New/Additional Funding Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>