force-app/main/default/objects/Cara_Plus_Activity__c/fields/Number_of_People_Served_Annually__c.field-meta.xml
<CustomField>
    <fullName>Number_of_People_Served_Annually__c</fullName>
    <label>Number of People Served Annually</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>&lt;50</fullName>
            </value>
            <value>
                <fullName>51-99</fullName>
            </value>
            <value>
                <fullName>100-199</fullName>
            </value>
            <value>
                <fullName>200-299</fullName>
            </value>
            <value>
                <fullName>&gt;300</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>