force-app/main/default/objects/Cara_Plus_Activity__c/fields/of_Adopted_Components_of_Cara_s_Model__c.field-meta.xml
<CustomField>
    <fullName>of_Adopted_Components_of_Cara_s_Model__c</fullName>
    <label># of Adopted Components of Cara&apos;s Model</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>