force-app/main/default/objects/Cara_Plus_Activity__c/fields/of_Changed_Behaviors__c.field-meta.xml
<CustomField>
    <fullName>of_Changed_Behaviors__c</fullName>
    <label># of Changed Behaviors</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>