force-app/main/default/objects/Cara_Plus_Activity__c/fields/of_People_in_Jobs__c.field-meta.xml
<CustomField>
    <fullName>of_People_in_Jobs__c</fullName>
    <label># of People in Jobs</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>