force-app/main/default/objects/Cara_Plus_Activity__c/fields/of_Placements_or_Equivalent__c.field-meta.xml
<CustomField>
    <fullName>of_Placements_or_Equivalent__c</fullName>
    <label># Placements or Equivalent</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>