force-app/main/default/objects/Cara_Plus_Activity__c/fields/of_Public_Position_Statements__c.field-meta.xml
<CustomField>
    <fullName>of_Public_Position_Statements__c</fullName>
    <label># of Public Position Statements</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>