force-app/main/default/objects/Cara_Plus_Activity__c/fields/Organization__c.field-meta.xml
<CustomField>
    <fullName>Organization__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Organization</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordType.Id</field>
            <operation>notEqual</operation>
            <value>0120Z000001clM8</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Cara Plus Activities</relationshipLabel>
    <relationshipName>Cara_Plus_Activities</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>