force-app/main/default/objects/Cara_Plus_Activity__c/fields/Partner_Details_Lead_Interests__c.field-meta.xml
<CustomField>
    <fullName>Partner_Details_Lead_Interests__c</fullName>
    <label>Partner Details/Lead Interests</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Affiliate</fullName>
            </value>
            <value>
                <fullName>Inclusion Action Lab</fullName>
            </value>
            <value>
                <fullName>IE Technical Assistance</fullName>
            </value>
            <value>
                <fullName>Workforce Development Solutions Lab</fullName>
            </value>
            <value>
                <fullName>Workforce Fellowship</fullName>
            </value>
            <value>
                <fullName>WFD Technical Assistance</fullName>
            </value>
            <value>
                <fullName>Unsure</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>