force-app/main/default/objects/Cara_Plus_Activity__c/fields/Population_Focus__c.field-meta.xml
<CustomField>
    <fullName>Population_Focus__c</fullName>
    <label>Population Focus</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Low income or economically disadvantaged</fullName>
            </value>
            <value>
                <fullName>Unemployed or underemployed</fullName>
            </value>
            <value>
                <fullName>Homeless</fullName>
            </value>
            <value>
                <fullName>People with physical disabilities</fullName>
            </value>
            <value>
                <fullName>People with mental disabilities</fullName>
            </value>
            <value>
                <fullName>Opportunity youth</fullName>
            </value>
            <value>
                <fullName>Justice involved</fullName>
            </value>
            <value>
                <fullName>Veterans</fullName>
            </value>
            <value>
                <fullName>Newcomers, immigrants, or refugees</fullName>
            </value>
            <value>
                <fullName>Single parents</fullName>
            </value>
            <value>
                <fullName>Place-based</fullName>
            </value>
            <value>
                <fullName>Substance abuse and addiction</fullName>
            </value>
            <value>
                <fullName>Domestic violence survivors</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>