force-app/main/default/objects/Cara_Plus_Activity__c/fields/Progress_Note_Type__c.field-meta.xml
<CustomField>
    <fullName>Progress_Note_Type__c</fullName>
    <label>Progress Note Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>1 Year Periodic Check-In</fullName>
            </value>
            <value>
                <fullName>Quarterly Check-In</fullName>
                <label>3 Month Periodic Check-In</label>
            </value>
            <value>
                <fullName>Email Correspondence</fullName>
            </value>
            <value>
                <fullName>Technical Assistance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>