force-app/main/default/objects/Cara_Plus_Activity__c/fields/Reduction_in_Time_to_Gainful_Employment__c.field-meta.xml
<CustomField>
    <fullName>Reduction_in_Time_to_Gainful_Employment__c</fullName>
    <label>Reduction in Time to Gainful Employment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0-10%</fullName>
            </value>
            <value>
                <fullName>11-20%</fullName>
            </value>
            <value>
                <fullName>21-30%</fullName>
            </value>
            <value>
                <fullName>31-40%</fullName>
            </value>
            <value>
                <fullName>41-50%</fullName>
            </value>
            <value>
                <fullName>51-60%</fullName>
            </value>
            <value>
                <fullName>61-70%</fullName>
            </value>
            <value>
                <fullName>71-80%</fullName>
            </value>
            <value>
                <fullName>81-90%</fullName>
            </value>
            <value>
                <fullName>91-100%</fullName>
            </value>
            <value>
                <fullName>Unsure</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>