force-app/main/default/objects/Cara_Plus_Activity__c/fields/Referral_Source__c.field-meta.xml
<CustomField>
    <fullName>Referral_Source__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>Link to Organization record or Individual Household for those leads which were referred</inlineHelpText>
    <label>Referral Source</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordType.Id</field>
            <operation>notEqual</operation>
            <value>0120Z000001clM8</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Cara Plus Activities (Referral Source)</relationshipLabel>
    <relationshipName>Cara_Plus_Activities1</relationshipName>
    <type>Lookup</type>
</CustomField>