force-app/main/default/objects/Cara_Plus_Activity__c/fields/Relationship_Narrative__c.field-meta.xml
<CustomField>
    <fullName>Relationship_Narrative__c</fullName>
    <label>Relationship Narrative</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>