force-app/main/default/objects/Cara_Plus_Activity__c/fields/Retention_Rate__c.field-meta.xml
<CustomField>
    <fullName>Retention_Rate__c</fullName>
    <label>Retention Rate (%)</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>