force-app/main/default/objects/Cara_Plus_Activity__c/fields/Segmentation_Narrative__c.field-meta.xml
<CustomField>
    <fullName>Segmentation_Narrative__c</fullName>
    <label>Additional Notes</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>