force-app/main/default/objects/Cara_Plus_Activity__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <label>Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Alumni Referral</fullName>
            </value>
            <value>
                <fullName>External Referral</fullName>
            </value>
            <value>
                <fullName>Staff Member</fullName>
            </value>
            <value>
                <fullName>Cara Plus Outreach</fullName>
            </value>
            <value>
                <fullName>Eblast/Social Media</fullName>
            </value>
            <value>
                <fullName>Media</fullName>
            </value>
            <value>
                <fullName>Web</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Network Partner</fullName>
                <isActive>false</isActive>
                <label>Network Partner</label>
            </value>
            <value>
                <fullName>Referral</fullName>
                <isActive>false</isActive>
                <label>Referral</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>