force-app/main/default/objects/Cara_Plus_Activity__c/fields/Staff_Size__c.field-meta.xml
<CustomField>
    <fullName>Staff_Size__c</fullName>
    <label>Staff Size</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0-5</fullName>
            </value>
            <value>
                <fullName>6-15</fullName>
            </value>
            <value>
                <fullName>16-25</fullName>
            </value>
            <value>
                <fullName>26-50</fullName>
            </value>
            <value>
                <fullName>51-100</fullName>
            </value>
            <value>
                <fullName>&gt;100</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>