force-app/main/default/objects/Cara_Plus_Activity__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <description>Start date of the reporting period (i.e., first day of the fiscal quarter).</description>
    <inlineHelpText>Start date of the reporting period (i.e., first day of the fiscal quarter).</inlineHelpText>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>