force-app/main/default/objects/Cara_Plus_Activity__c/fields/Timeframe__c.field-meta.xml
<CustomField>
    <fullName>Timeframe__c</fullName>
    <inlineHelpText>If reporting off-quarter, what timeframe is covered by this informal update?</inlineHelpText>
    <label>Timeframe</label>
    <type>TextArea</type>
</CustomField>