force-app/main/default/objects/Cara_Plus_Activity__c/fields/Total_Jobs__c.field-meta.xml
<CustomField>
    <fullName>Total_Jobs__c</fullName>
    <formula>Internships_Temp_Jobs_or_Equivalent__c + of_Placements_or_Equivalent__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label># Total Jobs</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>