force-app/main/default/objects/Cara_Plus_Activity__c/fields/Update_Type__c.field-meta.xml
<CustomField>
    <fullName>Update_Type__c</fullName>
    <label>Update Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Annual</fullName>
            </value>
            <value>
                <fullName>Quarterly</fullName>
            </value>
            <value>
                <fullName>Technical Assistance</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>