force-app/main/default/objects/Cara_Plus_Activity__c/fields/Years_in_Human_Services__c.field-meta.xml
<CustomField>
    <fullName>Years_in_Human_Services__c</fullName>
    <label>Year Founded, Human Services</label>
    <length>20</length>
    <type>Text</type>
</CustomField>