force-app/main/default/objects/Cara_Plus_Activity__c/fields/Years_in_Workforce_Development__c.field-meta.xml
<CustomField>
    <fullName>Years_in_Workforce_Development__c</fullName>
    <label>Year Founded, Workforce Development</label>
    <length>20</length>
    <type>Text</type>
</CustomField>