force-app/main/default/objects/Cara_Plus_Activity__c/recordTypes/Affiliate_Outcomes.recordType-meta.xml
<RecordType>
    <fullName>Affiliate_Outcomes</fullName>
    <active>true</active>
    <label>Affiliate Outcomes</label>
</RecordType>