force-app/main/default/objects/Cara_Plus_Activity__c/recordTypes/Employer.recordType-meta.xml
<RecordType>
    <fullName>Employer</fullName>
    <active>true</active>
    <label>Employer Relationship</label>
</RecordType>