force-app/main/default/objects/Cara_Plus_Activity__c/recordTypes/Employer_Outcomes.recordType-meta.xml
<RecordType>
    <fullName>Employer_Outcomes</fullName>
    <active>true</active>
    <label>Employer Outcomes</label>
</RecordType>