force-app/main/default/objects/Cara_Plus_Activity__c/recordTypes/Practitioner.recordType-meta.xml
<RecordType>
    <fullName>Practitioner</fullName>
    <active>true</active>
    <label>Practitioner Relationship</label>
</RecordType>