force-app/main/default/objects/Cara_Plus_Activity__c/recordTypes/Practitioner_Outcomes.recordType-meta.xml
<RecordType>
    <fullName>Practitioner_Outcomes</fullName>
    <active>true</active>
    <label>Practitioner Outcomes</label>
</RecordType>