force-app/main/default/objects/Cara_Plus_Activity__c/recordTypes/Progress_Note.recordType-meta.xml
<RecordType>
    <fullName>Progress_Note</fullName>
    <active>false</active>
    <label>Progress Note</label>
</RecordType>