force-app/main/default/objects/Cara_Plus_Activity__c/validationRules/Other_Timeframe.validationRule-meta.xml
<ValidationRule>
    <fullName>Other_Timeframe</fullName>
    <active>true</active>
    <errorConditionFormula>ispickval(Update_Type__c, &quot;Other&quot;)

&amp;&amp;

isblank( Timeframe__c )</errorConditionFormula>
    <errorDisplayField>Timeframe__c</errorDisplayField>
    <errorMessage>Please fill out the &apos;Timeframe&apos; field, specifying what time period this informal affiliate update covers.</errorMessage>
</ValidationRule>